--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "vite-plugin-require": "^1.1.14",
         "vue": "^3.4.19",
         "vue-cookies": "^1.8.3",
         "vue-router": "^4.3.0"
