--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "vue": "^3.4.26",
         "vue-axios": "^3.5.2",
+        "vue-cookie": "^1.1.4",
+        "vue-cookies": "^1.8.4",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.2"
     }
